--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -139,10 +139,15 @@ $Z_{м_174} = -0.5$, что соответствует примерно 30% ве
 
 В общем виде, ее можно сформулировать так: 
 
-> Значения признака, являющегося случайной величиной (чье значение нельзя предсказать точно) и подтверженного влиянию нескольких независимых факторов, распределены нормально.
+> Значения признака, являющегося случайной величиной (чье значение нельзя предсказать точно) и подтверженного влиянию сразу нескольких независимых факторов, распределены нормально.
+
+Именно поэтому для многих признаков, с которыми мы работаем (рост, вес, ответы на опросник и тд) мы ожидаем именно нормального распределения.
 
 Из нее есть важное следствие:
-> Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
+> Если мы будем извлекать много выборок из генеральной совокупности (проводить много одинаковых исследований), то выборочные средние этих выборок будут распределены *нормально*
+
+Например, мы изучаем выгорание среди преподавателей, но вместо одного исследования провели сто, и в каждом исследовании посчитали выборочное среднее. Такое распредление и называется *распределением выборочных средних*, и оно будет распределено нормально. Причем чем больше выборок мы будем извлекать -- тем более будет стемиться к нормальному это распределение, и тем **ближе к среднему генеральной совокупности будет ближе среднее распределения выборочных средних** (да, тут очень много слов "средние" и "распределения", но постарайтесь не запутаться).
+
 
 ```{r, eval=TRUE, echo = FALSE, message = FALSE, }
 means_from_samples <- replicate(1000, mean(rnorm(100, mean = 100, sd = 15)))
@@ -154,32 +159,55 @@ mean(means_from_samples)
 sd(means_from_samples)
 ```
 
-Стандартное отклонение распределение выборочных срених называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и вычисляется по формуле $\sigma_{\overline{x}}= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $s_{\overline{x}}= \frac{s} {\sqrt{n}}$
+Визуализацию принципов работы этого важного следствия ЦПТ можно посмотреть здесь https://gallery.shinyapps.io/CLT_mean/. Меняя число извлеченных из ГС выборок можно посмотреть, как выборочные распределения становятся ближе к нормальному распредедению, а их среднее -- к среднему генеральной совокупности.
 
-Визуализация принципов работы 
-https://gallery.shinyapps.io/CLT_mean/
+Это, кстати, очень полезное свойство для научных исследований: гораздо большее доверие вызывают исследования, проведенный несколько раз при одних и тех же или похожих условиях, так как в этом случае можно провести мета-анализ и рассчитать средние параметы этих исследований -- они будут граздо сильнее отражать ГС, чем каждое отдельно взятое исследоваание.
 
-## Стандартная ошибка среднего {#standart_error}
+Если про cтандартное отклонение такого распределение выборочных средних мы можем сказать, что оно приближается к среднему ГС с увеличением числа выборок, то стандартное отклонение этого распределение называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и показывает, наасколько наши выборки отклонились от ГС.
+Стандартная ошибка среднего часто обозначается как se и вычисляется по формуле $\sigma_{\overline{x}}=se= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $se= \frac{sd} {\sqrt{n}}$
+
+Стандартную ошибку среднего можно рассматривать как ошибку репрезентативности: насколько сильно выборочные параметы нашей выборки (среднее и стандартное отклонение) могут отличаться от ГС. Чем меньше se, тем ближе наша выборка к генеральной совокупности.
 
 $se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
+
+Стандартная ошибка среднего -- необходима для того, чтобы сделать интервльную оценку среднего ГС и рассчитать *доверительный интервал* для среднего ГС.
 
 ## Доверительный интервал {#ci}
 
 Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Этоо были тоочечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички с одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором зато точно будет содержаться интересующий нас параметр.
 
-Доверительный интервал -- процент выборок из генеральной совокупности, интервальные оценки которых будут содержать популяционное среднее.
+Доверительный интервал показывает, в каких границах от выборочного среднего находится среднее генеральной совокупности. Например, если на моей выборке я получила среднее значение выгорания, равное 13.5 (что бы это ни значило), то я могу указать границы, которые будут содержать среднее ГС: mean +- = [mean - , mean +]] = [13.5 - 2.4, 13.5 + 2.4]. В этом суть интервальных оценок ГС.
+
+Доверительный интервал может обозначаться как CI (conidence interval)
+
+Доверительному интервалу соответствует определенный процент -- как правил, ровно те проценты, которые мы уже выучили для стандартного отклонения. Это процент выборок из генеральной совокупности, доверитльные интервлы которых будут содержать среднее генеральной совкупности.
 
 https://rpsychologist.com/d3/ci/ 
 
-Интервальные оценки
+
 
 Доверительные интервал считаются как $\pm Z_\% \times \mathrm{se} \\$
 
 * $68\%:  \pm  1 \times \mathrm{se} \\$
-* $95\%:  \pm  2 \times \mathrm{se} \\$
+* $95\%:  \pm  1.96 \times \mathrm{se} = \pm  2 \times \mathrm{se}\\$
 * $99\%:  \pm  3 \times \mathrm{se} \\$
 
 Задача на доверительный интервал:
 
 > Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
+
+<div>
+<details>
+<summary>*Решение (попробуйте сначала решить сами!)*</summary>
+
+1. Сначала определеяем, о чем нас спрашивают в этой задаче: нам нужно посотроить доверительный интервал для выборочного среднего = 15 и сравнить его с числом 14: находится оно левее этого интервала, и тогда можно сказать, что родители проводят с детьми в среднем больше 14 часов, или 14 входит в этот интервал, и тогда это утверждение будет неверно
+
+2. Вычисляем доверительный интервал CI (confidence interval): равен $Z_{99\%} \times se$:  Z-значение, при котором охватывается 99% даннных, равно примерно 3.
+$se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}} = \frac{4.5}{\sqrt{100}} = 0.45$
+Доверительный интервал равен $Z_{99\%} \times se = 3 \times 0.45 = 1.35$:
+
+3. Таким образом, можем записать доверительный интервал: $[M-CI; M+CI] = [15-1.35; 15+1.35] = [13.65;16.35]$. Сравним его с числом 14: видимо, что 14 входит в этот интервал, то есть, утверждение, что родители проводят с детьми в среднем больше 14 часов на уровне доверия 0.99 неверно.
+
+</details>
+</div>
 
