--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -160,37 +160,89 @@ sd(means_from_samples)
 ```
 
 Визуализацию принципов работы этого важного следствия ЦПТ можно посмотреть здесь https://gallery.shinyapps.io/CLT_mean/. Меняя число извлеченных из ГС выборок можно посмотреть, как выборочные распределения становятся ближе к нормальному распредедению, а их среднее -- к среднему генеральной совокупности.
+Эта визуализация наглядно показывает, как количество наблюдений в выборке и количество извлекаемых выборок влияет на оценку среднего ГС.
+Допустим распределение данных в ГС выглядит так
 
-Это, кстати, очень полезное свойство для научных исследований: гораздо большее доверие вызывают исследования, проведенный несколько раз при одних и тех же или похожих условиях, так как в этом случае можно провести мета-анализ и рассчитать средние параметы этих исследований -- они будут граздо сильнее отражать ГС, чем каждое отдельно взятое исследоваание.
+<p align="center"> 
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="70%"}
+knitr::include_graphics("docs/images/clt-1.png")
+```
+</p>
+
+Если мы будем извлекать из него 10 выборок по 30 наблюдений, то они будут выглядеть так
+
+<p align="center"> 
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="70%"}
+knitr::include_graphics("docs/images/clt-2.png")
+```
+</p>
+
+А распределение этих 10 выборочных средних -- так
+
+<p align="center"> 
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="70%"}
+knitr::include_graphics("docs/images/clt-3.png")
+```
+</p>
+
+При этом, увеличивая размер выборок с 30 в 3 раза, наши выборки будут больше походить на распределние ГС
+
+<p align="center"> 
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="70%"}
+knitr::include_graphics("docs/images/clt-4.png")
+```
+</p>
+
+А увеличив само число выборок до 87 -- распределение выборочных средних будет уже более похоже на нормальное
+
+<p align="center"> 
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="70%"}
+knitr::include_graphics("docs/images/clt-6.png")
+```
+</p>
+
+
+Центральная предельная теорема имеет очень полезный смысл для научных исследований: гораздо большее доверие вызывают исследования, проведенные несколько раз при одних и тех же или похожих условиях, так как в этом случае можно провести мета-анализ и рассчитать средние параметы этих исследований -- они будут гораздо сильнее отражать ГС, чем каждое отдельно взятое исследоваание.
 
 Если про cтандартное отклонение такого распределение выборочных средних мы можем сказать, что оно приближается к среднему ГС с увеличением числа выборок, то стандартное отклонение этого распределение называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и показывает, наасколько наши выборки отклонились от ГС.
 Стандартная ошибка среднего часто обозначается как se и вычисляется по формуле $\sigma_{\overline{x}}=se= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $se= \frac{sd} {\sqrt{n}}$
 
 Стандартную ошибку среднего можно рассматривать как ошибку репрезентативности: насколько сильно выборочные параметы нашей выборки (среднее и стандартное отклонение) могут отличаться от ГС. Чем меньше se, тем ближе наша выборка к генеральной совокупности.
 
-$se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
+$se = \frac{\sigma}{\sqrt{n}} ≈ \frac{sd}{\sqrt{n}}$
 
 Стандартная ошибка среднего -- необходима для того, чтобы сделать интервльную оценку среднего ГС и рассчитать *доверительный интервал* для среднего ГС.
 
 ## Доверительный интервал {#ci}
 
-Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Этоо были тоочечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички с одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором зато точно будет содержаться интересующий нас параметр.
+Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Это были точечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички к одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором будет содержаться интересующий нас параметр (например, среднее ГС).
 
-Доверительный интервал показывает, в каких границах от выборочного среднего находится среднее генеральной совокупности. Например, если на моей выборке я получила среднее значение выгорания, равное 13.5 (что бы это ни значило), то я могу указать границы, которые будут содержать среднее ГС: mean +- = [mean - , mean +]] = [13.5 - 2.4, 13.5 + 2.4]. В этом суть интервальных оценок ГС.
+Доверительный интервал показывает, в каких границах от выборочного среднего находится среднее генеральной совокупности. Например, если на моей выборке я получила среднее значение выгорания равное 13.5 (что бы это ни значило), то я, используя эти выборочные данные, могу указать границы, которые будут содержать среднее уже генеральной совокупности: mean ± интервальная оценка, например $13.5 ± 2.4 = [13.5 - 2.4, 13.5 + 2.4]$. В этом суть интервальных оценок ГС.
 
-Доверительный интервал может обозначаться как CI (conidence interval)
+Доверительный интервал может обозначаться как *CI (confidence interval)*
 
-Доверительному интервалу соответствует определенный процент -- как правил, ровно те проценты, которые мы уже выучили для стандартного отклонения. Это процент выборок из генеральной совокупности, доверитльные интервлы которых будут содержать среднее генеральной совкупности.
+Доверительному интервалу соответствует определенный процент -- как правило, ровно те проценты, которые мы уже выучили -- сколько данных лежат в ± 1 стандартном отклонении от среднего (68%), ± 2 sd (95%) и ± ± 3 sd (99,7%) . Это -- процент выборок из генеральной совокупности, доверительные интервалы которых будут содержать среднее генеральной совкупности. Здесь тоже на помощь приходит красивая визуализация https://rpsychologist.com/d3/ci/. Меняя доверительный интервал (например, с 95% на 68%), можем заметить, что наши выборки (горизонтальные линии) стали реже ловить среднее генеральной совокупности (вертикальная пунктирная линяя), а средние этих выборок (синие точки) откланяются от среднего ГС дальше и чаще
 
-https://rpsychologist.com/d3/ci/ 
+<p align="center"> 
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="70%"}
+knitr::include_graphics("docs/images/ci_vis.png")
+```
+</p>
 
+Доверительный интервал пригодится нам и далее в статистике вывода, так как вообще-то уже позволяет оценить правомерность того или иного статистического высказывания относительно выборочного среднего. 
+Он считается с помощью Z-оценки и стандартной ошибки среднего, только здесь мы делаем как бы обратную стандартизацию -- до этого мы вычисляли Z-оценку для заданного числа из выборки и смотрели, какой процент данных соответствует этой оценке, а теперь мы смотрим на процнт и находим для него Z-оценку.
 
+<p align="center"> 
+$CI_\%: \bar X \pm Z_\% \times \mathrm{se} \\$, где $\bar X$ -- выборочное среднее, $Z_\% $ -- Z-оценка для заданного процента данных, $se$  -- стандартная ошибка среднего.
+</p>
 
-Доверительные интервал считаются как $\pm Z_\% \times \mathrm{se} \\$
+Полезно помнить ключевые значения:
+* $Z_{68\%} = 1$, значит $CI_{68\%} = \pm  1 \times \mathrm{se} \\$
+* $Z_{95\%} = 1.96 ≈ 2$, значит $CI_{95\%} = \pm  2 \times \mathrm{se} \\$ 
+* $Z_{99\%} = 2.576$, значит $CI_{99\%} = \pm  2.576 \times \mathrm{se} \\$
+* $Z_{99.7\%} = 3$, значит $CI_{99.7\%} = \pm  3 \times \mathrm{se} \\$
 
-* $68\%:  \pm  1 \times \mathrm{se} \\$
-* $95\%:  \pm  1.96 \times \mathrm{se} = \pm  2 \times \mathrm{se}\\$
-* $99\%:  \pm  3 \times \mathrm{se} \\$
+Чаще всего на практике используется 95%-доверительный интервал, и в следующем блоке про статистический вывод мы поймем, почему.
 
 Задача на доверительный интервал:
 
