--- a/13-data_analysis_R.Rmd
+++ b/13-data_analysis_R.Rmd
@@ -161,8 +161,9 @@ sd(whr$Family) # стандартное отклонение
 
 ## Задания после семинара 2 {#tasks_sem2}
 
-1. Прочитайте в среде, в которой вы работаете, данные WHR за 2016 год. 
-2. Посчитайте среднее, стандартное отклонение, медиану и размах (разброс от максимального до минимального значения) по всем 6 показателям, составляющим уровень счастья. Что можно сказать про них? Где самый большой размах? Где среднее и медиана оказались близко друг к другу, а где не очень? *(для подсчета медианы и размаха в R нужно будет немножко поучиться гуглить или использовать другие материалы)*
+1. Прочитайте в среде, в которой вы работаете, данные WHR за 2016 год (в R -- используйте функцию `read_csv()` из пакета `tidyverse`). 
+2. Посчитайте среднее, стандартное отклонение, медиану и размах (разброс от максимального до минимального значения) по всем 6 показателям, составляющим уровень счастья (Economy, Family, Health, Freedom, Trust, Generosity). Что можно сказать про них? Где самый большой размах? Где среднее и медиана оказались близко друг к другу, а где не очень? *(для подсчета медианы и размаха в R нужно будет немножко поучиться гуглить или использовать другие материалы)*
+3. Постройте гистограмму и график плотности вероятности для всех 6 показателей, составляющим уровень счастья.
 
 ## Предобработка данных {#preprocessing}
 
