--- a/13-data_analysis_R.Rmd
+++ b/13-data_analysis_R.Rmd
@@ -56,20 +56,40 @@ https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/
 
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
-# создание векторов
-c(1, 2, 3, 4, 5) # c() -- это  функция
+# создание векторов  -------------------------------------------------------
+c(1, 2, 3, 4, 5) # c() -- это  функция, которая создает вектор, вне зависимости от типа данных
+
+# Числовые векторы  -------------------------------------------------------
 c(1, 2, 3, 4, 5, 7, 21, 143)
 
-1:5 #функция перечисления всех значений от 1 до 5
-1:10 #функция перечисления всех значений от 1 до 10
+vector1 <- c(1, 2, 3, 4, 5) # vector1 -- название переменной, 1, 2, 3, 4, 5 -- аргументы функции с()
 
-seq(1, 10, 2) # функция перечисления всех значений от 1 до 10 с шагом 2
+age <- c(18, 22, 25, 20, 21)
+
+1:10 # функция : создает числовой вектор от 1 до 10 только с шагом 1
+10:1
+
+seq(2, 10, 2) # функция seq() создает числовой вектор-перечисление значений от 2 до 10 с шагом 2 
+seq(1, 10, 2) # функция seq() создает числовой вектор-перечисление значений от 1 до 10 с шагом 2
+
+# Текстовые векторы -------------------------------------------------------
+
+answers <- c("нет", "да", "да", "да", "нет")
 
 #пример приведения типов -- TRUE и FALSE превратились в 1 и 0
 c(1, 2, 3, 4, 5, TRUE, FALSE)
 c(1, 2, 3, 4, 5, "1", "0")
 
-# логические выражения
+# Логические вектора и приведение типов ------------------------------------------------------
+
+condition <- c(TRUE, FALSE, TRUE, TRUE, FALSE) #логический вектор
+
+#примеры приведения типов, когда в векторе встречаются разные типы данных -- R приводит их к одному
+c(1, 2, 3, 4, TRUE, FALSE)
+c(1, 2, 3, 4, 5, 6)
+c(1, 10, 3, -4, "зеленый", "карий")
+
+# Логические выражения ------------------------------------------------------
 
 a <- 5
 b <- 10
@@ -86,6 +106,33 @@ a < b
 # что делать, если условие ложно)
 
 ifelse(a < b, a+b, "а не меньше b")
+
+
+# датафрейм ---------------------------------------------------------------
+
+eye_color <- c("green", "brown", "grey", "blue", "red")
+  
+data <- data.frame(vector1, age, answers, condition, eye_color) #функция data.frame() создает датафрейм (табличку с данными) из существующих векторов
+View(data) # функция View() открвает эту табличку в отдельной вкладке (то же, что и по клику иконки в окне Environment)
+
+data$age # отбираем колонку из датафрейма: название_датафрейма$название_колонки
+
+# описательные визуализации
+hist(data$age, breaks = c(18, 22, 27))
+lines(density(data$age)) #добавляет график плотности вероятности на гистограмму
+
+?hist
+plot(density(data$age))
+
+# описательные статистики
+mean(data$age)
+sd(data$age)
+round(sd(data$age),1) #округляет до 1 цифры после запятой
+
+min(data$age)
+max(data$age)
+range(data$age)
+summary(data$age)
 ```
 ## Начало работы в среде
 
