--- a/13-data_analysis_R.Rmd
+++ b/13-data_analysis_R.Rmd
@@ -278,7 +278,7 @@ whr %>%
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 var4 <- whr %>%
   select(`Happiness Score`) %>%
-  pull()
+  pull() #вытягивает числовые значения и превращает в числовой вектор
 var4
 
 #смотрим структуру данных
@@ -355,6 +355,17 @@ whr %>%
   filter(`Happiness Rank` <= 10) 
 ```
 
+Если нам нужно выполнить несколько условий одновременно (например, странны с `Happiness Score` не менее 10, но более 7), то мы можем пользоваться логическим "и" и логическим "или" (разница между ними в том, что "и" отбирает только те строки, которые удовлетворяют И первому, И второму условию, а "или" отбирает строки, которые удовлетворяют любому из условий, ИЛИ первому, ИЛИ второму)
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+whr %>% 
+  filter(`Happiness Rank` <= 10 | `Happiness Score` >=7) %>% #логическое или
+  View() 
+
+whr %>% 
+  filter(`Happiness Rank` <= 10 & `Happiness Score` >=7) %>% #логическое и
+  View() 
+```
 
 
 ### Создание колонок {#mutate}
@@ -468,36 +479,41 @@ whr_new %>%
 
 Еще одна часто встречающая задача -- отсортировать датафрейм по возрастанию или убыванию одной переменной.
 
-В базовом R когда у нас есть только один вектор, мы можем сделать это так
+Когда у нас есть только один вектор (числовой или текстовый), а не вся табличка данных, мы можем сделать это так средствами базового R:
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
-sort(whr_new$`Happiness Score`)
+sort(whr_new$`Happiness Score`) #сортировка только вектора
 sort(whr_new$`Happiness Score`, decreasing = TRUE)
 ```
 
-В тайдиверс -- с помощью функции `arrange()`, где в качестве аргумента передается название колонки, по которой будем делать сортировку. А если нам нужно указать, что сортировка должна быть по убыванию, от большого к меньшего -- необходимо вставить аргумент `desc()`
+Если нам нужно отсортировать всю табличку по какой-то колонке, придется прибегнуть к тайдиверс и отсортировать таблицу с помощью функции `arrange()`, где в качестве аргумента передается название колонки, по которой будем делать сортировку. А если нам нужно указать, что сортировка должна быть по убыванию, от большого к меньшего -- необходимо вставить аргумент `desc()`
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr_new %>% 
   drop_na() %>% 
-  select(`Happiness Score`) %>% 
-  arrange(`Happiness Score`) # сортировка по возрастанию
+  arrange(Freedom) # сорировка  всей таблицы по колонке Freedom
 
 whr_new %>% 
   drop_na() %>% 
-  select(`Happiness Score`) %>% 
-  arrange(desc(`Happiness Score`)) # сортировка по убыванию
+  arrange(`Trust (Government Corruption)`) # сорировка  всей таблицы по колонке Trust
+
+whr_new %>% 
+  drop_na() %>% 
+  arrange(desc(`Happiness Score`)) # сортировка всей таблицы по колонке Happiness Score по убыванию
 ```
 
-Самое интересное здесь -- что мы можем сортировать весь датафрейм по значениям одной переменной
+Выбрать одну колонку и отсортировать ее мы тоже можем, мы уже умеет выбирать одну колонку -- нужно сначала применить функцию `select()`: 
+
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr_new %>% 
   drop_na() %>% 
-  arrange(Freedom) # сорируем по значениям переменной Freedom
+  select(`Happiness Score`) %>% 
+  arrange(`Happiness Score`) # сортировка одной колонки по возрастанию
 
 whr_new %>% 
   drop_na() %>% 
-  arrange(`Trust (Government Corruption)`) # сорируем по значениям переменной Trust
+  select(`Happiness Score`) %>% 
+  arrange(desc(`Happiness Score`)) # сортировка одной колонки по колонке по убыванию
 ```
 
 ## Задания после семинара 3 {#tasks_sem3}
@@ -592,12 +608,11 @@ plot(density(whr_new$`Happiness Score`, na.rm = TRUE))
 hist(whr_new$`Happiness Score`)
 ```
 
-
-Эти визуализации верны, но они стандартные и выглядят не очень красиво. А меж тем визуализации очень важны -- от их качества зависит понятность представления данных, с помощью визуилизаций можно даже манипулировать данными. В скриптовых языках огромное количество инструментов для работы с визуализациями. В питоне это matplotlib. А теперь добро пожаловать в ggplot2 -- вселенную графиков в R https://ggplot2.tidyverse.org/
+Эти визуализации верны, но они стандартные и выглядят не очень красиво. А меж тем визуализации очень важны -- от их качества зависит понятность представления данных, с помощью визуилизаций можно даже манипулировать данными. В скриптовых языках огромное количество инструментов для работы с визуализациями. В питоне это `matplotlib`. А теперь добро пожаловать в `ggplot2` -- вселенную графиков в R https://ggplot2.tidyverse.org/
 
 Например, можно нарисовать такой [график](https://www.google.com/url?sa=i&url=https%3A%2F%2Fadrienne-marshall.github.io%2Fggplot2_workshop%2F&psig=AOvVaw1y2l2bObt_HK2KcP7m_73h&ust=1676402334991000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCNihzL-bk_0CFQAAAAAdAAAAABAJ), или [такой](https://edaoud.com/assets/img/articles/maps-ggplot2/map_1.png). Все это достигается средствами пакета `ggplot2`, который уже интегрирован в `tidyverse`.
 
-"gg" в названии пакета означает Grammar of graphics. Подробно можно почитать, например, у Ивана Позднякова https://pozdniakov.github.io/tidy_stats/230-ggplot2.html
+**"gg"** в названии пакета означает **Grammar of graphics**. Подробно можно почитать, например, у Ивана Позднякова https://pozdniakov.github.io/tidy_stats/230-ggplot2.html
 
 Принцип состоит из рисовки графиком по слоям. 
 Обязательные слои:
@@ -688,7 +703,7 @@ whr_new %>%
   theme_minimal()
 ```
 
-И можем даже раскрасить точки на этом графике в зависимости от третьей переменной! Например, региона. Все ровно так же, как и с цветами до этого: если хотим залить фигуру в зависимости от значений третьей переменной, то для раскраски используется аругмент fill, если покрасить контур -- то color (как контур и заливка в ворде или паверпоинт). Но с той разницей, что теперь fill color задаются **внутри аестетик**, так как это все еще про "натягивание совы на глобус", то есть наших данных на график. 
+И можем даже раскрасить точки на этом графике в зависимости от значений третьей переменной! Например, региона. Все ровно так же, как и с цветами до этого: если хотим залить фигуру в зависимости от значений третьей переменной, то для раскраски используется аругмент fill, если покрасить контур -- то color (как контур и заливка в ворде или паверпоинт). Но с той разницей, что теперь fill color задаются **внутри аестетик**, так как это все еще про "натягивание совы на глобус", то есть наших данных на график. 
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr_new %>%
@@ -697,17 +712,32 @@ whr_new %>%
   theme_minimal()
 ```
 
+Существует огромное количество дополнительных штук для более красивых визуализаций в ggplot, чтобы делать что-то по-настоящему невероятное. Мы, конечно, не успеем познакомиться с ними в рамках курса, но вот, например, дополнительный пакет с палетками, сделанными по фильмам Уэса Андерсена:) Если мы хотим раскрасить наш график не просто в цвета по умолчанию, а в какие-то особенные -- есть пакет, в которые собрали цветовые схемы из этих фильмов! Сначала его нужно привычно поставить через `install.packages()`, подключить через `library()`, а далее добавить одну строчку с добавлением шкалы `scale_fill_manual()` или `scale_color_manual()` -- опять же, в зависимости от того, хотим мы делать заливку этими палетками или контур.
+
+```{r}
+# install.packages("wesanderson")
+library(wesanderson)
+
+whr %>% 
+  filter(Region %in% c("Western Europe", "Eastern Asia", "Sub-Saharan Africa")) %>% #здесь я фильтрую часть строк, входящих только в три региона, чтобы на графике были только три цвета и не было цветового взрыва, так как регионов в данных много
+  ggplot(aes(x = `Happiness Score`, y = `Trust (Government Corruption)`,
+             fill = Region)) +
+  geom_boxplot() +
+  theme_minimal() +
+  scale_fill_manual(values = wes_palette("Royal1"))
+```
+
 
 ## Задания после семинара 4 {#tasks_sem4}
 
 Для заданий используется датасет [`2016-2`](https://raw.githubusercontent.com/elenary/StatsForDA/main/2016-2.csv) 
-
-1. Посчитайте, сколько всего суммарно NA в колонках `Economy (GDP per Capita)`, `Family`, `Health (Life Expectancy)`, `Freedom `, `Trust (Government Corruption)`, `Generosity` *(задание можно сделать разными способами, подойдет любой, дающий верный овтет)*
-2. Посчитайте описательные статистики для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `: среднее, медиану, моду, стандартное отклонение, дисперсию и межквартильный размах, а также *(только для тех, кто работает в R)* вычислите значения для 1 и 3 квартилей. Ответы должны быть отличны от `NA` *(один из способов узнать значения по квартилям -- например, с помощью отдельных общих функций для описательных статистик)*.
-3. Используя созданную в [прошлой домашке](#tasks_sem3) колонку co значениями `upper` и `lower` в зависимости от значений `Happiness Score`, посчитайте среднее и стандартное отклонения внутри этих групп (`upper` и `lower`) для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `. *(Только для тех, кто работает в R)* Сравните полученные средние значения со значениями для 1 и 3 квартилей из предыдущего задания. Что можно сказать про них? 
-4. Постройте графики плотности вероятности для переменных `Family` и `Freedom `, *(только для тех, кто работает в R)* используя как минимум 2 отличиные от дефолтных настройки (тему, цвет, тип линии, прозрачность и тд.) Примеры можно погуглить или посмотреть в [читшите](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
-5. Постройте диаграмму рассеяния для переменной `Family` по переменной `Freedom ` и *(только для тех, кто работает в R)* раскрасьте точки в зависимости от значений переменной с upper и lower, созданной в прошлой домашке.
-6. Посчитайте коэффициент корреляции между переменными `Family` и `Freedom `.
+1. Выполните все примеры, которые есть в этом разделе, убедитесь, что все работает верно.
+2. Посчитайте, сколько всего суммарно NA в колонках `Economy (GDP per Capita)`, `Family`, `Health (Life Expectancy)`, `Freedom `, `Trust (Government Corruption)`, `Generosity` *(задание можно сделать разными способами, подойдет любой, дающий верный овтет)*
+3. Посчитайте описательные статистики для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `: среднее, медиану, моду, стандартное отклонение, дисперсию и межквартильный размах, а также *(только для тех, кто работает в R)* вычислите значения для 1 и 3 квартилей. Ответы должны быть отличны от `NA` *(один из способов узнать значения по квартилям -- например, с помощью отдельных общих функций для описательных статистик)*.
+4. Используя созданную в [прошлой домашке](#tasks_sem3) колонку co значениями `upper` и `lower` в зависимости от значений `Happiness Score`, посчитайте среднее и стандартное отклонения внутри этих групп (`upper` и `lower`) для колонок `Economy (GDP per Capita)`, `Family`, `Freedom `. *(Только для тех, кто работает в R)* Сравните полученные средние значения со значениями для 1 и 3 квартилей из предыдущего задания. Что можно сказать про них? 
+5. Постройте графики плотности вероятности для переменных `Family` и `Freedom `, *(только для тех, кто работает в R)* используя как минимум 2 отличиные от дефолтных настройки (тему, цвет, тип линии, прозрачность и тд.) Примеры можно погуглить или посмотреть в [читшите](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
+6. Постройте диаграмму рассеяния для переменной `Family` по переменной `Freedom ` и *(только для тех, кто работает в R)* раскрасьте точки в зависимости от значений переменной с upper и lower, созданной в прошлой домашке.
+7. Посчитайте коэффициент корреляции между переменными `Family` и `Freedom `.
 
 ## Проверка гипотез
 
